show page and EUR sign on index plus dashboard alignment fixed

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,6 +1,5 @@
 .cards-dashboard {
   display: flex;
-  justify-content: space-between;
   h1 {
     font-family: 'Pacifico', cursive;
   }
